hola que tal Merche

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bienvenido a mi proyecto</title>
 </head>
 <body>
-    <h1>Me llamo Merche</h1>
+    <h1>Me llamo Alberto</h1>
     <h2>Esta es la primera entrada de mi blog</h2>
     
 </body>
